--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   </div>
   <div id="text">Welcome to Dragon Repeller. You must defeat the dragon that is preventing people from leaving the town. You are in the town square. Where do you want to go? Use the buttons above.</div>
 </div>
+<script  src="classes.js"></script>
 <script  src="script.js"></script>
 </body>
 
